@startuml

class CategoryIconController {
    + __construct(CategoryIconService $categoryIconService)

    + uploadIcon(Request $request, Category $category): JsonResponse

    + editIcon(Request $request, Category $category): JsonResponse
}

class CategoryIconService {
    + __construct(FilesystemManager $storage)

    + upload(): void

    + edit(): void

    - saveIcon(): void
}

class FilesystemManager {
    + put($path, $options)

    + url($path)

    + exists($path)
}

CategoryIconController --> CategoryIconService

CategoryIconService --> FilesystemManager
@enduml